--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "core-js": "^3.23.0",
         "postcss-loader": "^7.3.3",
         "regenerator-runtime": "^0.13.9",
-        "webpack": "^5.74.0",
+        "webpack": "~5.94.0",
         "webpack-cli": "^4.10.0",
         "webpack-notifier": "^1.15.0"
     },
@@ -20,10 +20,17 @@
     },
     "dependencies": {
         "autoprefixer": "^10.4.15",
-        "sass-loader": "^13.3.2"
-    
+        "body-parser": "~1.20.3",
+        "cookie": "^0.7.2",
+        "express": "~4.19.2",
+        "follow-redirects": "~1.15.4",
+        "sass-loader": "^13.3.2",
+        "send": "^0.19.1",
+        "serve-static": "~1.16.0",
+        "webpack-dev-middleware": "~5.3.4",
+        "ws": "~8.17.1"
     },
-    "browserslist": [   
+    "browserslist": [
         "defaults"
     ]
 }
